# app/features/auth/model/constants.ts
@@ -1,4 +1,6 @@
 export const AUTH_TOKEN_STORAGE_KEY = 'profitability.auth.token'
 export const AUTH_TOKEN_COOKIE_KEY = 'profitability.auth.token'
+export const AUTH_REFRESH_TOKEN_STORAGE_KEY = 'profitability.auth.refreshToken'
+export const AUTH_REFRESH_TOKEN_COOKIE_KEY = 'profitability.auth.refreshToken'
 export const APP_THEME_STORAGE_KEY = 'profitability.app.theme'
 export const APP_LOCALE_STORAGE_KEY = 'profitability.app.locale'
