# openapi/auth.json
@@ -1,14 +1,8 @@
 {
   "openapi": "3.1.0",
-  "info": {
-    "title": "OpenAPI definition",
-    "version": "v0"
-  },
+  "info": { "title": "OpenAPI definition", "version": "v0" },
   "servers": [
-    {
-      "url": "http://localhost:8081",
-      "description": "Generated server url"
-    }
+    { "url": "http://172.19.0.7:8081", "description": "Generated server url" }
   ],
   "paths": {
     "/api/auth/register": {
@@ -18,9 +12,7 @@
         "requestBody": {
           "content": {
             "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/RegisterRequest"
-              }
+              "schema": { "$ref": "#/components/schemas/RegisterRequest" }
             }
           },
           "required": true
@@ -32,10 +24,34 @@
               "*/*": {
                 "schema": {
                   "type": "object",
-                  "additionalProperties": {
-                    "type": "string"
-                  }
+                  "additionalProperties": { "type": "string" }
                 }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/auth/refresh": {
+      "post": {
+        "tags": ["auth-controller"],
+        "summary": "Обновление токенов",
+        "description": "Принимает действующий Refresh токен, возвращает новую пару токенов",
+        "operationId": "refreshToken",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/TokenRefreshRequest" }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": { "$ref": "#/components/schemas/JwtResponse" }
               }
             }
           }
@@ -46,14 +62,12 @@
       "post": {
         "tags": ["auth-controller"],
         "summary": "Вход в систему",
-        "description": "Возвращает JWT токен при успешной проверке email и пароля",
+        "description": "Возвращает Access и Refresh токены при успешной проверке учетных данных",
         "operationId": "login",
         "requestBody": {
           "content": {
             "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/LoginRequest"
-              }
+              "schema": { "$ref": "#/components/schemas/LoginRequest" }
             }
           },
           "required": true
@@ -63,12 +77,7 @@
             "description": "OK",
             "content": {
               "*/*": {
-                "schema": {
-                  "type": "object",
-                  "additionalProperties": {
-                    "type": "string"
-                  }
-                }
+                "schema": { "$ref": "#/components/schemas/JwtResponse" }
               }
             }
           }
@@ -81,34 +90,35 @@
       "RegisterRequest": {
         "type": "object",
         "properties": {
-          "email": {
-            "type": "string",
-            "format": "email",
-            "minLength": 1
-          },
+          "email": { "type": "string", "format": "email", "minLength": 1 },
           "password": {
             "type": "string",
             "maxLength": 2147483647,
             "minLength": 6
           },
-          "role": {
-            "type": "string",
-            "enum": ["USER", "ADMIN"]
-          }
+          "role": { "type": "string", "enum": ["USER", "ADMIN"] }
         },
         "required": ["email", "password"]
+      },
+      "TokenRefreshRequest": {
+        "type": "object",
+        "properties": { "refreshToken": { "type": "string", "minLength": 1 } },
+        "required": ["refreshToken"]
+      },
+      "JwtResponse": {
+        "type": "object",
+        "properties": {
+          "accessToken": { "type": "string" },
+          "refreshToken": { "type": "string" },
+          "tokenType": { "type": "string" }
+        },
+        "required": ["accessToken", "refreshToken", "tokenType"]
       },
       "LoginRequest": {
         "type": "object",
         "properties": {
-          "email": {
-            "type": "string",
-            "minLength": 1
-          },
-          "password": {
-            "type": "string",
-            "minLength": 1
-          }
+          "email": { "type": "string", "minLength": 1 },
+          "password": { "type": "string", "minLength": 1 }
         },
         "required": ["email", "password"]
       }
